<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background_color"

    tools:context=".UpdateTask">


    <TextView
        android:id="@+id/updatetextViewshape"
        android:layout_width="wrap_content"
        android:layout_height="66dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/bottomshape"
        android:paddingStart="0dp"
        android:paddingTop="7dp"
        android:text="    Update Your Task"
        android:textColor="@color/white"
        android:textSize="38sp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="60dp"
        android:text="@string/select_category"
        android:textSize="32sp" />

    <Spinner
        android:id="@+id/updatespinnerCategory"
        android:layout_width="370dp"
        android:layout_height="80dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="16dp"
        android:minHeight="48dp"
        android:padding="8dp"
        android:scrollbarSize="90dp" />

    <!-- EditText for Task Description -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="13dp"
        android:text="@string/task_description"
        android:textSize="32sp" />

    <!-- Due Date Picker -->

    <EditText
        android:id="@+id/updateTextTaskDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="23dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/enter_task_description"
        android:textSize="29sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="13dp"
        android:text="@string/due_date"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/updateTextSelectDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="23dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:focusable="false"
        android:hint="@string/select_date"
        android:textSize="29sp" />


    <!-- Due Time Picker -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="13dp"
        android:text="@string/due_time"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/updateTextSelectTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="23dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:focusable="false"
        android:hint="@string/select_time"
        android:textSize="29sp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
    <Button
        android:id="@+id/buttonUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="56dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/button"
        android:textSize="30dp"
        android:text="Update" />

    <!--<Button
        android:id="@+id/buttonDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/button"
        android:textSize="26dp"
        android:text="Delete" />-->



    </LinearLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/imageView23"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:layout_alignParentBottom="true"
            android:src="@drawable/navigation_panel"
            android:contentDescription="Navigation Panel" />

        <!-- Icon 1 aligned to the start (left) of the navigation panel -->

        <!-- Icon 2 aligned to the end (right) of the navigation panel -->
        <ImageView
            android:id="@+id/Home"
            android:layout_width="100dp"
            android:layout_height="90dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="Icon 1"
            android:src="@drawable/home_icon" />

        <ImageView
            android:id="@+id/Addtask"
            android:layout_width="100dp"
            android:layout_height="90dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="176dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="Icon 1"
            android:src="@drawable/baseline_add_task_24" />

        <ImageView
            android:id="@+id/setTimer"
            android:layout_width="100dp"
            android:layout_height="90dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="Icon 2"
            android:src="@drawable/menu_alarm_icon" />

    </RelativeLayout>


</LinearLayout>