<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="0dp"
    android:background="#E0F7FA">


    <!-- Spinner for Category Selection-->
    <TextView
        android:id="@+id/textViewshape"
        android:layout_width="wrap_content"
        android:layout_height="66dp"
        android:background="@drawable/bottomshape"
        android:paddingStart="0dp"
        android:paddingTop="7dp"
        android:text="    Add Your Task Here"
        android:textColor="@color/white"
        android:textSize="32dp"
        android:layout_marginTop="25dp"/>
    <!-- <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bottomshape" />-->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="15dp"
        android:text="@string/select_category"
        android:textSize="30sp" />

    <Spinner
        android:id="@+id/spinnerCategory"
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="16dp"
        android:entries="@array/Category"
        android:minHeight="48dp"
        android:padding="8dp" />

    <!-- EditText for Task Description -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:text="@string/task_description"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/editTextTaskDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/enter_task_description"
        android:textSize="28sp" />

    <!-- Due Date Picker -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:text="@string/due_date"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/editTextSelectDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:focusable="false"
        android:hint="@string/select_date"
        android:textSize="28sp" />


    <!-- Due Time Picker -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:text="@string/due_time"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/editTextSelectTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:focusable="false"
        android:hint="@string/select_time"
        android:textSize="28sp" />
    <!--<DatePicker
        android:id="@+id/datePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewTime"
        android:layout_centerHorizontal="true"
        android:calendarViewShown="true"
        android:datePickerMode="spinner" />


    <TimePicker
        android:id="@+id/timePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/datePicker"
        android:layout_centerHorizontal="true"
        android:timePickerMode="spinner"
        android:hour="12"
        android:minute="0" />-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        >

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/setAlarmIconF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/border"
            android:contentDescription="Set Alarm Task"
            android:src="@drawable/baseline_alarm" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="38dp"
            android:layout_marginRight="15dp"
            android:text="@string/reminder"
            android:textSize="28sp" />


    </LinearLayout>


    <Button
        android:id="@+id/buttonSave"
        android:layout_width="348dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/button"
        android:padding="9dp"
        android:text="@string/save"
        android:textSize="25sp" />
    <!--<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">


       <Button
            android:id="@+id/buttonReminder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/button"
            android:text="Reminder"
            android:textSize="29dp" />

    </LinearLayout>-->
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/imageView23"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:layout_alignParentBottom="true"
            android:src="@drawable/navigation_panel"
            android:contentDescription="Navigation Panel" />

        <!-- Icon 1 aligned to the start (left) of the navigation panel -->

        <!-- Icon 2 aligned to the end (right) of the navigation panel -->
        <ImageView
            android:id="@+id/Home"
            android:layout_width="100dp"
            android:layout_height="90dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="Icon 1"
            android:src="@drawable/home_icon" />

        <ImageView
            android:id="@+id/Addtask"
            android:layout_width="100dp"
            android:layout_height="90dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="176dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="Icon 1"
            android:src="@drawable/baseline_add_task_24" />

        <ImageView
            android:id="@+id/setTimer"
            android:layout_width="100dp"
            android:layout_height="90dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="Icon 2"
            android:src="@drawable/menu_alarm_icon" />

    </RelativeLayout>

</LinearLayout>
